# FaultPilot_V01

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  submit.txt
Documentation/: changelog.md
Documentation/Objective/: agent.md  architecture.drawio  fase 0_diseño.md  use case.md
Documentation/Training/: 01_ingestion_tutorial.md  02_hybrid_search_tutorial.md  03_routing_rag_tutorial.md  04_ui_integration_tutorial.md  05_huggingface_spaces_deployment_tutorial.md
Documentation/plan/: 2026-06-11-hito2-hybrid-retrieval-design.md  2026-06-11-hito2-hybrid-retrieval-implementation-plan.md  2026-06-11-hito3-routing-rag-design.md  2026-06-11-hito3-routing-rag-implementation-plan.md  sprint_plan.md
config/: prompts.yaml  settings.yaml
data/processed/: bosch_cc220_chunks.jsonl  fanuc_ac_spindle_chunks.jsonl  manifest_hito1.json  validation_hito1.json
faultpilot/: __init__.py  alarm_codes.py
faultpilot/ingestion/: __init__.py  cli.py  contracts.py  pipeline.py
faultpilot/rag/: __init__.py  context_builder.py  generator.py  graph.py  openai_client.py  postprocess.py  schemas.py  service.py  state.py
faultpilot/retrieval/: __init__.py  bm25_index.py  cli.py  config.py  fusion.py  loaders.py  reranker.py  schemas.py  service.py  vector_index.py
faultpilot/routing/: __init__.py  intent_router.py  llm_classifier.py  local_classifier.py  schemas.py
faultpilot/ui/: __init__.py  app.py  (+7 more)
scripts/: test_stream.py
tests/: test_bosch_parser.py  test_chunk_contract.py  test_fanuc_parser.py  test_ingestion_cli.py  test_ingestion_pipeline.py
(+32 files in other folders)
