[project]
name = "faultpilot-v01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.3.4",
    "pdfplumber>=0.11.8",
]

[project.scripts]
faultpilot-ingest = "faultpilot.ingestion.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["faultpilot*"]

[tool.uv]
package = true
