[project]
name = "faultpilot-v01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.3.4",
    "pdfplumber>=0.11.8",
    "pyyaml>=6.0.2",
    "rank-bm25>=0.2.2",
    "chromadb>=1.0.20",
    "sentence-transformers>=5.1.0",
    "gradio>=5.0.0",
]

[project.scripts]
faultpilot-ingest = "faultpilot.ingestion.cli:main"
faultpilot-retrieval = "faultpilot.retrieval.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["faultpilot*"]

[tool.uv]
package = true
